docs/apache-airflow-providers-microsoft-winrm/3.9.0/_sources/_api/airflow/providers/microsoft/winrm/operators/winrm/index.rst.txt
airflow.providers.microsoft.winrm.operators.winrm
=================================================

.. py:module:: airflow.providers.microsoft.winrm.operators.winrm


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.winrm.operators.winrm.WinRMOperator


Module Contents
---------------

.. py:class:: WinRMOperator(*, winrm_hook = None, ssh_conn_id = None, remote_host = None, command = None, ps_path = None, output_encoding = 'utf-8', timeout = 10, expected_return_code = 0, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`


   WinRMOperator to execute commands on given remote host using the winrm_hook.

   :param winrm_hook: predefined ssh_hook to use for remote execution
   :param ssh_conn_id: connection id from airflow Connections
   :param remote_host: remote host to connect
   :param command: command to execute on remote host. (templated)
   :param ps_path: path to powershell, `powershell` for v5.1- and `pwsh` for v6+.
       If specified, it will execute the command as powershell script.
   :param output_encoding: the encoding used to decode stout and stderr
   :param timeout: timeout for executing the command.
   :param expected_return_code: expected return code value(s) of command.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('command',)



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: winrm_hook
      :value: None



   .. py:attribute:: ssh_conn_id
      :value: None



   .. py:attribute:: remote_host
      :value: None



   .. py:attribute:: command
      :value: None



   .. py:attribute:: ps_path
      :value: None



   .. py:attribute:: output_encoding
      :value: 'utf-8'



   .. py:attribute:: timeout
      :value: 10



   .. py:attribute:: expected_return_code
      :value: 0



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



